accordion on index

--- a/HCIL Pure CSS/welcome.html
+++ b/HCIL Pure CSS/welcome.html
@@ -115,7 +115,7 @@ a {
             </Link>
           </div>
           <div class="text">
-            Jain Clothing
+            Jain Kapda Bhandar
         </div>
 </div>
 </div>
