--- a/HCIL Pure CSS/singleItem.html
+++ b/HCIL Pure CSS/singleItem.html
@@ -181,6 +181,8 @@ a {
         <div class="singleItem__details">
           <p class="details__title">Mens Casual Premium Slim Fit T-Shirts</p>
           <p class="details__description">Slim-fitting style, contrast raglan long sleeve, three-button henley placket, light weight & soft fabric for breathable and comfortable wearing. And Solid stitched shirts with round neck made for durability and a great fit for casual fashion wear and diehard baseball fans. The Henley style round neckline includes a three-button placket.</p>
+          <br>
+          <p class="details__description">Textre : Cotton</p>
           <p class="details__price">Rs. 2200</p>
   
           <button
