--- a/HCIL Pure CSS/index.html
+++ b/HCIL Pure CSS/index.html
@@ -221,7 +221,7 @@
 <body>
 
 
-  <h1> Jain Kapda Bhandaar </h1>
+  <h1 style="background-color:powderblue;"> Jain Kapda Bhandaar </h1>
   <br>
   <div class="row">
     <div class="col">
