--- a/HCIL Pure CSS/welcome.html
+++ b/HCIL Pure CSS/welcome.html
@@ -4,6 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="./border.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <style>
     :root {
@@ -105,6 +108,7 @@ a {
 <body>
     <div class="app">
     <div id="root">
+      
         <div class="navbar">
               <h2 class="navbar__logo">Menu</h2>
             <Link to="/cart">
@@ -115,7 +119,8 @@ a {
             </Link>
           </div>
           <div class="text">
-            Jain Kapda Bhandar
+            <div class="bb"></div>
+            JK CLothing
         </div>
 </div>
 </div>
