--- a/HCIL Pure CSS/index.html
+++ b/HCIL Pure CSS/index.html
@@ -2,14 +2,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Jain Kapda Bhandaar</title>
+  <title>JK Clothing</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
   <link rel="stylesheet" href="./style.css">
-
-
 
 </head>
 <style>
@@ -221,7 +219,7 @@
 <body>
 
 
-  <h1 style="background-color:powderblue;"> Jain Kapda Bhandaar </h1>
+  <h1 style="background-color:powderblue;"> JK Clothing </h1>
   <br>
   <div class="row">
     <div class="col">
