--- a/HCIL Pure CSS/singleItem.html
+++ b/HCIL Pure CSS/singleItem.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <style>
-        :root {
-  --black__dark: #0b0c10;
-  --black_light: #1f2833;
-  --gray_white: #c5c6c7;
-  --blue_cyan: #66fcf1;
-  --blue_dark: #45a29e;
+      :root {
+      --black__dark: #1F1D36;
+    --black_light: #3F3351;
+    --gray_white: #c5c6c7;
+    --blue_cyan: #E9A6A6;
+    --blue_dark: #864879;
 }
 
 * {
