--- a/HCIL Pure CSS/singleItem.html
+++ b/HCIL Pure CSS/singleItem.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <style>
-      :root {
+    :root {
       --black__dark: #1F1D36;
     --black_light: #3F3351;
     --gray_white: #c5c6c7;
@@ -22,14 +22,14 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #0b0c10;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%2345a29e' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%231f2833' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%2361a9af' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%232f4c5f' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%237db0ba' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%2337748b' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%2398b6c2' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%233da0b3' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23b1bec6' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%2349cdd6' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23c5c6c7' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%2366fcf1' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
+  background-color: #864879;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%233f3351' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23e9a6a6' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23524f6a' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23d8919b' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23696c81' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23c67d91' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23848a99' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23b26a88' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23a3a8b0' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%239d5880' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23c5c6c7' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23864879' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
 }
 
 .navbar {
-  background: rgb(0, 0, 0, 75%);
+  background: #1f1d3652;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -105,15 +105,15 @@ a {
   flex: 50%;
   object-fit: scale-down;
   max-height: calc(100vh - 150px);
-  background-color: rgba(8, 214, 241, 0.26);
+  background-color: #1f1d3652;
   margin: 20px;
-  box-shadow: 0 2px 8px rgba(8, 214, 241, 0.26);
+  box-shadow: 0 2px 8px #1f1d3652;
   border-radius: 10px;
 }
 
 .singleItem__details {
   flex: 50%;
-  color: var(--blue_cyan);
+  color: var(--black__dark);
   display: flex;
   flex-direction: column;
   padding-left: 30px;
@@ -138,8 +138,8 @@ a {
   width: fit-content;
   padding: 10px;
   background: transparent;
-  color: var(--blue_cyan);
-  border: 1px solid var(--blue_cyan);
+  color: var(--black__dark);
+  border: 1px solid var(--black__dark);
   border-radius: 10px;
   font-size: 20px;
   font-weight: bold;
